log_2025_01_13_prepped/log_27302975_4.log
Removing conda
Loading conda
Mon Jan 13 19:59:17 UTC 2025
  File "/nas/cee-water/cjgleason/fiona/narrow_rivers_PIXC/prepNHD.py", line 45
    save_file = huc4 + '_prepped.parquet
                       ^
SyntaxError: unterminated string literal (detected at line 45)
Mon Jan 13 19:59:17 UTC 2025
